Update and rename Ch 2.1)HTML의 기본 구성 요소.html to Ch 2.1]HTML의 기본 구성 요소.html

--- a/Ch 2.1]HTML의 기본 구성 요소.html
+++ b/Ch 2.1]HTML의 기본 구성 요소.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chapter 2.1)HTML의 기본 구성 요소</title>
+    <title>Chapter 2.1]HTML의 기본 구성 요소</title>
 </head>
 <body>
     <!-- html은 크게 태그와 속성으로 나뉘어있다. -->
