--- a/Ch 2.2]HTML의 기본 구조.html
+++ b/Ch 2.2]HTML의 기본 구조.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chapter 2.2)HTML의 기본 구조</title>
+    <title>Chapter 2.2]HTML의 기본 구조</title>
 </head>
 <body>
 
